Added the para for followed by

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
       </div>
     </div>
 
+    <p class="follow-p">Followed by <b class="follow-b">abc.def</b>, <b class="follow-b">123.456</b> and 34 more</p>
+
     <div style="height: 2000px;"></div>
 </body>
 </html>
